--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "puppeteer": "^2.1.1",
     "rimraf": "^3.0.2",
     "sinon": "^7.2.2",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
   }
