--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/chai": "^4.1.0",
+    "@types/mocha": "^7.0.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "glob": "^7.1.3",
