--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "module": "ES6",
     "target": "es6",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "types": ["chai", "mocha"]
   },
   "include": ["./src/*"]
 }
