--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sinon": "^7.2.2",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
+    "tslint": "^6.1.0",
     "typescript": "^3.8.3",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
