--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf ./dist",
     "test": "npx karma start --single-run --browsers=ChromeHeadlessCustom",
     "lint": "npx tslint -c tslint.json 'src/**/*.ts'",
-    "build:ci": "npm ci && npm lint && npm run clean && npm tsc && npm run test"
+    "build:ci": "npm ci && npm run lint && npm run clean && npm run tsc && npm run test"
   },
   "main": "index.js",
   "license": "Apache-2.0",
