--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "scripts": {
     "clean": "rimraf ./dist",
     "test": "npx karma start --single-run --browsers=ChromeHeadlessCustom",
-    "build:ci": "npm ci && npm run clean && npm run test"
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'",
+    "build:ci": "npm ci && npm run lint && npm run clean && npx tsc && npm run test"
   },
   "main": "index.js",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/chai": "^4.1.0",
+    "@types/mocha": "^7.0.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "glob": "^7.1.3",
@@ -28,6 +31,10 @@
     "puppeteer": "^2.1.1",
     "rimraf": "^3.0.2",
     "sinon": "^7.2.2",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
+    "tslint": "^6.1.0",
+    "typescript": "^3.8.3",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
   }
