--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noImplicitAny": true,
     "outDir": "./modules/",
     "sourceMap": true,
+    "inlineSources": true,
     "strict": true,
     "target": "es6",
     "types": ["chai", "mocha"]
